fix call step, add more tests